creation du champ ville
en ajoutant un restaurant on ajoute la ville

--- a/serveur/public/index.html
+++ b/serveur/public/index.html
@@ -42,12 +42,16 @@
 				<fieldset>
 					<legend>Ajout d'un restaurant</legend>
 					<label>
-						Nom: <input type="text" name="nom"
+						Nom: <input type="text" name="name"
 						value="Sushis de rabat" required placeholder="Michel's restaurant">
 					</label>
 					<p></p>
 					<label>
 						Cuisine: <input type="text" name="cuisine" value="Japonais/Marocaine" required placeholder="Cuisine française">
+					</label>
+					<p></p>
+					<label>
+						Ville : <input type="text" name="borough" value="Nice/Monaco" required placeholder="Ville française">
 					</label>
 					<p></p>
 					<button>Ajouter ce restaurant</button>
@@ -67,12 +71,16 @@
 					</label>
 					<p></p>
 					<label>
-						Nom: <input type="text" name="nom"
+						Nom: <input type="text" name="name"
 						value="Sushis de rabat" required placeholder="Michel's restaurant">
 					</label>
 					<p></p>
 					<label>
 						Cuisine: <input type="text" name="cuisine" value="Japonais/Marocaine" required placeholder="Cuisine française">
+					</label>
+					<p></p>
+					<label>
+						Ville: <input type="text" name="borough" value="Nice/Monaco" required placeholder="Ville française">
 					</label>
 					<p></p>
 					<button>Modifier ce restaurant</button>
